--- a/templates/participant_profile/re_payment.html
+++ b/templates/participant_profile/re_payment.html
@@ -4,43 +4,7 @@
 {% block head %}
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <link rel="stylesheet" href="{% static 'dashboard/css/insert_participant.css' %}" type="text/css" media="screen" />
-    <style type="text/css" media="screen">
-     .min-vh{
-         min-height: 50vh;
-     }
-     .banner {
-         border-radius: 0.25rem;
-         color: #fff;
-         background-color: #FF0000;
-     }
-     .nav .nav-link:hover::after {
-         width: 100%;
-     }
-     #v-pills-tab .nav-link:hover {
-         border-bottom: 2px solid #aaa;
-     }
-     #v-pills-tab .nav-link.active{
-         color: red;
-         border-bottom: 2px solid red;
-         background: #fff;
-     }
-     .card-detail {
-         background-color: #fff2f4;
-         border-color: #ffc9c6;
-     }
-     legend {
-         display: inline !important;
-         font-family: 'Source Sans Pro', sans-serif;
-         width: auto !important;
-         max-width: 100%;
-         padding: 0 0.5rem !important;
-         margin-bottom: .5rem;
-         font-size: 1.75rem;
-         line-height: inherit;
-         color: inherit;
-         white-space: normal;
-     }
-    </style>
+    <link rel="stylesheet" href="{% static 'participant_profile/css/primaseru.css' %}" type="text/css" media="screen" />
 {% endblock head %}
 {% block navbar %}{% endblock navbar %}
 {% block container %}container-fluid{% endblock container %}
@@ -68,6 +32,9 @@
                 <a class="btn btn-danger btn-sm" href="{% url 'set-photo-profile' %}">
                     Unggah Photo
                 </a>
+                <a class="btn btn-danger btn-sm" href="{% url 'participant-kk' %}">
+                    Unggah Berkas
+                </a>
             </div>
         </div>
     </div>
@@ -76,7 +43,6 @@
         <div class="col-12 px-2 px-lg-5 bg-light border-bottom border-top">
             <div class="nav nav-fill mx-0 mx-lg-5 px-0 px-lg-3" id="v-pills-tab" role="navigation">
                 <a class="nav-link tab-profile" href="{% url 'participant-major' %}" role="tab">Jurusan</a>
-                <a class="nav-link tab-profile" href="{% url 'participant-kk' %}" role="tab">Unggah KK</a>
                 <a class="nav-link tab-profile" href="{% url 'participant-lms' %}" role="tab">Akun LMS</a>
                 <a class="nav-link tab-profile" href="{% url 'participant-graduation' %}" role="tab">Kelulusan</a>
                 {% if pass_test == 'L' %}
@@ -95,7 +61,7 @@
             <div class="col-sm-12">
                 <div class="row shadow rounded py-2 bg-white min-vh mb-4">
 
-                    <div class="card card-bg mt-3 mx-4">
+                    <div class="card mt-3 mx-4">
                         <div class="card-body">
                             <h4 class="judul">
                             {{ name|capfirst  }}
@@ -110,47 +76,53 @@
                                 Lakukan pembayaran daftar ulang ke Nomor Virtual Account <b>Mandiri</b> dan <b>CIMB Niaga</b>. <br />
                             </p>
                             <p>
-                                <span class="card-detail border border-danger rounded p-2">Nomor Virtual Account: {{ data.virt_acc_number  }}</span>
+                                <span class="card-detail card-bg border border-danger rounded p-2">Nomor Virtual Account: {{ data.virt_acc_number  }}</span>
                             </p>
                             <hr />
                             <div class="row px-3">
-                                <div class="card-detail border border-danger ml-0 mb-2 mb-md-0 p-2 rounded col-12 col-md">
+                                <div class="card-detail card-bg border border-danger ml-0 mb-2 mb-md-0 p-2 rounded col-12 col-md">
                                     <h5 class="judul"><b>Pembayaran Pertama</b></h5>
                                     <hr class="my-2" />
-                                    {% if data.verified_1 %}
-                                        Status : <span class="badge badge-success">Terverifikasi</span>
-                                    {% else %}
-                                        Status : <span class="badge badge-warning">Belum Terverifikasi</span>
-                                    {% endif %}
                                     <p>
-                                        Nominal Pembayaran: Rp. {{ data.pay_mount_1|floatformat:"0g" }},- <br />
-                                        Tenggat Pembayaran: {{ data.deadline_1|date:'d F Y'  }}
+                                        <ul class="pl-4">
+                                            {% if data.verified_1 %}
+                                                <li>Status : <span class="badge badge-success">Terverifikasi</span></li>
+                                            {% else %}
+                                                <li>Status : <span class="badge badge-warning">Belum Terverifikasi</span></li>
+                                            {% endif %}
+                                            <li>Nominal Pembayaran: Rp. {{ data.pay_mount_1|floatformat:"0g" }},-</li>
+                                            <li>Tenggat Pembayaran: {{ data.deadline_1|date:'d F Y'  }}</li>
+                                        </ul>
                                     </p>
                                 </div>
-                                <div class="card-detail border border-danger  mx-md-2 ml-0 mb-2 mb-md-0 p-2 rounded col-12 col-md">
+                                <div class="card-detail card-bg border border-danger  mx-md-2 ml-0 mb-2 mb-md-0 p-2 rounded col-12 col-md">
                                     <h5 class="judul"><b>Pembayaran Kedua</b></h5>
                                     <hr class="my-2" />
-                                    {% if data.verified_1 %}
-                                        Status : <span class="badge badge-success">Terverifikasi</span>
-                                    {% else %}
-                                        Status : <span class="badge badge-warning">Belum Terverifikasi</span>
-                                    {% endif %}
                                     <p>
-                                        Nominal Pembayaran: Rp. {{ data.pay_mount_2|floatformat:"0g" }},- <br />
-                                        Tenggat Pembayaran: {{ data.deadline_2|date:'d F Y'  }}
+                                        <ul class="pl-4">
+                                            {% if data.verified_2 %}
+                                                <li>Status : <span class="badge badge-success">Terverifikasi</span></li>
+                                            {% else %}
+                                                <li>Status : <span class="badge badge-warning">Belum Terverifikasi</span></li>
+                                            {% endif %}
+                                            <li>Nominal Pembayaran: Rp. {{ data.pay_mount_2|floatformat:"0g" }},-</li>
+                                            <li>Tenggat Pembayaran: {{ data.deadline_2|date:'d F Y'  }}</li>
+                                        </ul>
                                     </p>
                                 </div>
-                                <div class="card-detail border border-danger ml-0 mb-2 mb-md-0 p-2 rounded col-12 col-md">
+                                <div class="card-detail card-bg border border-danger ml-0 mb-2 mb-md-0 p-2 rounded col-12 col-md">
                                     <h5 class="judul"><b>Pembayaran Ketiga</b></h5>
                                     <hr class="my-2" />
-                                    {% if data.verified_1 %}
-                                        Status : <span class="badge badge-success">Terverifikasi</span>
-                                    {% else %}
-                                        Status : <span class="badge badge-warning">Belum Terverifikasi</span>
-                                    {% endif %}
                                     <p>
-                                        Nominal Pembayaran: Rp. {{ data.pay_mount_3|floatformat:"0g" }},- <br />
-                                        Tenggat Pembayaran: {{ data.deadline_3|date:'d F Y'  }}
+                                        <ul class="pl-4">
+                                            {% if data.verified_3 %}
+                                            <li>Status : <span class="badge badge-success">Terverifikasi</span></li>
+                                            {% else %}
+                                            <li>Status : <span class="badge badge-warning">Belum Terverifikasi</span></li>
+                                            {% endif %}
+                                            <li>Nominal Pembayaran: Rp. {{ data.pay_mount_3|floatformat:"0g" }},-</li>
+                                            <li>Tenggat Pembayaran: {{ data.deadline_3|date:'d F Y'  }}</li>
+                                        </ul>
                                     </p>
                                 </div>
                             </div>
