--- a/templates/participant_profile/participant_files.html
+++ b/templates/participant_profile/participant_files.html
@@ -23,7 +23,7 @@
                     <h5 class="judul mt-2 mb-0">Berkas Identitas</h5>
                 </a>
 
-                {% if pass_test == 'L' %}
+                {% if pay == 'L' %}
                 <a class="nav-link tab-profile  px-3 text-center" href="{% url 'participant-raport' %}" role="tab">
                     <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" fill="currentColor" class="bi bi-file-earmark-binary" viewBox="0 0 16 16">
                         <path d="M7.05 11.885c0 1.415-.548 2.206-1.524 2.206C4.548 14.09 4 13.3 4 11.885c0-1.412.548-2.203 1.526-2.203.976 0 1.524.79 1.524 2.203zm-1.524-1.612c-.542 0-.832.563-.832 1.612 0 .088.003.173.006.252l1.559-1.143c-.126-.474-.375-.72-.733-.72zm-.732 2.508c.126.472.372.718.732.718.54 0 .83-.563.83-1.614 0-.085-.003-.17-.006-.25l-1.556 1.146zm6.061.624V14h-3v-.595h1.181V10.5h-.05l-1.136.747v-.688l1.19-.786h.69v3.633h1.125z"/>
