--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/dashboard_base.html' %}
 {% load crispy_forms_tags %}
 {% block dashtitle %}
-    Dashboard Primaseru <br />
+    Dashboard Primaseru <span class="badge badge-warning">{{ request.user.username }}</span> <br />
     <a class="btn btn-light"  href="{% url 'insert-participant' %}">Tambah Pendaftar</a>
 {% endblock dashtitle %}
 {% block head %}
@@ -52,12 +52,15 @@
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">No. Peserta</th>
-                            <th scope="col" class="w-25">Nama</th>
+                            <th scope="col">Nama</th>
+                            <th scope="col">Nama Orang Tua</th>
                             <th scope="col">Asal Sekolah</th>
                             <th scope="col">No. HP</th>
                             <!-- <th scope="col">Tanggal Lahir</th> -->
                             <th scope="col" data-toggle="tooltip" data-placement="top" title="Sesuaikan Dengan Warna Statik di Atas.">Status</th>
+                            {% if request.user.is_staff %}
                             <th scope="col" >Action</th>
+                            {% endif %}
                         </tr>
                     </thead>
                     <tbody>
@@ -65,40 +68,46 @@
                             <tr>
                                 <th scope="row">{{ forloop.counter  }}</th>
                                 <td>{{ s.registration_number }}</td>
-                                <td><a href="{% url 'participant-detail' s.account.pk %}">{{ s.full_name|title  }}</a></td>
+                                <td><a href="{% url 'participant-detail' s.account.pk %}">{{ s.full_name|title  }}</a>
+                                    {% if s.verified %}
+                                    <span class="badge badge-info" data-toggle="tooltip" data-placement="top" title="Bisa Akses Profile (verified)">&#10004;</span>
+                                    {% endif %}
+                                </td>
+                                <td>{{ s.parent_full_name|title  }}</td>
                                 <td>{{ s.previous_school  }}</td>
                                 <td>{{ s.participant_phone_number  }}</td>
                                 <!-- <td>{{ s.account.participantprofile.date_born|date:"d M Y"  }}</td> -->
                                 <td>
                                     {% if s.account.participantgraduation.passed == 'L' %}
-                                        <span class="badge badge-success">
+                                        <span class="badge badge-success" data-toggle="tooltip" data-placement="top" title="Lulus">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-success bi bi-circle-fill" viewBox="0 0 16 16">
                                                 <circle cx="8" cy="8" r="8"/>
                                             </svg>
                                         </span>
                                     {% endif %}
                                     {% if s.account.participantrepayment.paid_off %}
-                                        <span class="badge badge-primary">
+                                        <span class="badge badge-primary" data-toggle="tooltip" data-placement="top" title="Lunas">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-primary bi bi-circle-fill" viewBox="0 0 16 16">
                                                 <circle cx="8" cy="8" r="8"/>
                                             </svg>
                                         </span>
                                     {% endif %}
                                     {% if s.account.participantrepayment %}
-                                        <span class="badge badge-danger">
+                                        <span class="badge badge-danger" data-toggle="tooltip" data-placement="top" title="Sudah Bayar Daftar Ulang">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-danger bi bi-circle-fill" viewBox="0 0 16 16">
                                                 <circle cx="8" cy="8" r="8"/>
                                             </svg>
                                         </span>
                                     {% endif %}
                                     {% if s.account.participantprofile %}
-                                        <span class="badge badge-warning">
+                                        <span class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="Sudah Mengisi Form Daftar Ulang">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-warning bi bi-circle-fill" viewBox="0 0 16 16">
                                                 <circle cx="8" cy="8" r="8"/>
                                             </svg>
                                         </span>
                                     {% endif %}
                                 </td>
+                                {% if request.user.is_staff %}
                                 <td>
                                     <form method="POST" class="" action="{% url 'delete-participant' s.account.pk %}">
                                         {% csrf_token %}
@@ -113,6 +122,7 @@
                                         </div>
                                     </form>
                                 </td>
+                                {% endif %}
                             </tr>
                         {% endfor %}
                     </tbody>
