--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -46,6 +46,9 @@
                             <li class="nav-item mx-2">
                                 <a class="nav-link" href="#section-8">Biaya</a>
                             </li>
+                            <li class="nav-item mx-2">
+                                <a class="nav-link" href="{% url 'files-download' %}">Download</a>
+                            </li>
                             {% if user.is_staff %}
                                 <li class="nav-item mx-2">
                                     <a class="nav-link my-btn-outline-primary py-2 px-3 text-white" href="{% url 'logout' %}">Logout</a>
