--- a/templates/participant_profile/payment.html
+++ b/templates/participant_profile/payment.html
@@ -45,13 +45,15 @@
                     <div class="card-red-gradient text-center ">
                         <h1 class="mb-3">Silahkan Lakukan <br> Pembayaran Dahulu</h1>
                         <p>Silakan lakukan pembayaran daftar Primaseru ke nomor rekening:</p>
-                        <h4 class="font-weight-bold mt-2">131 00 154 128 95</h4>
-                        <p class="mb-4">(Bank Mandiri A.N Nofrizal)</p>
+                        <h4 class="font-weight-bold mt-2">{{ data.rek_num  }}</h4>
+                        <p class="mb-4">({{ data.bank|title }} A.N {{ data.whom_rek|title  }})</p>
                         <p class="mb-1">Sebesar</p>
-                        <h3 class="font-weight-bold mt-2 mb-4">Rp. 300.000,-</h3>
-                        <p>Setelah berhasil melakukan transfer, silahkan lakukan verifikasi ke nomor <br> WhatsApp berikut: <span class="font-weight-bold">+62 821-1863-2474</span></p>
+                        <h3 class="font-weight-bold mt-2 mb-4">Rp. {{ data.money|floatformat:"0g"  }},-</h3>
+                        <p>Setelah berhasil melakukan transfer, silahkan lakukan verifikasi ke nomor <br> WhatsApp berikut:
+                            <span class="font-weight-bold">{{ data.wa_number }}</span>
+                        </p>
                         <p class="mb-4"><small>Atau tekan tombol di bawah ini</small></p>
-                        <a href="https://wa.wizard.id/primaseru1" class="btn-white">
+                        <a href="{{ data.wa_link }}" class="btn-white">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.66985 18.3334L2.79652 14.1934C2.05413 12.9208 1.6641 11.4734 1.66652 10.0001C1.66652 5.39758 5.39735 1.66675 9.99985 1.66675C14.6023 1.66675 18.3332 5.39758 18.3332 10.0001C18.3332 14.6026 14.6023 18.3334 9.99985 18.3334C8.52716 18.3358 7.0804 17.9461 5.80818 17.2042L1.66985 18.3334ZM6.99235 6.09008C6.88473 6.09676 6.77958 6.12511 6.68318 6.17341C6.59278 6.22461 6.51026 6.2886 6.43818 6.36341C6.33818 6.45758 6.28152 6.53925 6.22068 6.61841C5.91269 7.01924 5.74702 7.51126 5.74985 8.01675C5.75152 8.42508 5.85818 8.82258 6.02485 9.19425C6.36568 9.94591 6.92652 10.7417 7.66735 11.4792C7.84568 11.6567 8.01985 11.8351 8.20735 12.0009C9.12684 12.8105 10.2226 13.3943 11.4073 13.7059L11.8815 13.7784C12.0357 13.7867 12.1898 13.7751 12.3448 13.7676C12.5875 13.7551 12.8245 13.6893 13.039 13.5751C13.1481 13.5189 13.2546 13.4577 13.3582 13.3917C13.3582 13.3917 13.394 13.3684 13.4623 13.3167C13.5748 13.2334 13.644 13.1742 13.7373 13.0767C13.8065 13.0051 13.8665 12.9209 13.9123 12.8251C13.9773 12.6892 14.0423 12.4301 14.069 12.2142C14.089 12.0492 14.0832 11.9592 14.0807 11.9034C14.0773 11.8142 14.0032 11.7217 13.9223 11.6826L13.4373 11.4651C13.4373 11.4651 12.7123 11.1492 12.2698 10.9476C12.2232 10.9272 12.1732 10.9157 12.1223 10.9134C12.0653 10.9076 12.0077 10.914 11.9534 10.9322C11.8991 10.9505 11.8493 10.9802 11.8073 11.0192V11.0176C11.8032 11.0176 11.7473 11.0651 11.1448 11.7951C11.1103 11.8415 11.0626 11.8767 11.008 11.896C10.9534 11.9153 10.8943 11.9178 10.8382 11.9034C10.7839 11.8889 10.7307 11.8705 10.679 11.8484C10.5757 11.8051 10.5398 11.7884 10.469 11.7576L10.4648 11.7559C9.98811 11.5478 9.5467 11.2666 9.15651 10.9226C9.05151 10.8309 8.95401 10.7309 8.85401 10.6342C8.52616 10.3203 8.24044 9.96509 8.00401 9.57758L7.95485 9.49841C7.91953 9.44522 7.89098 9.38783 7.86985 9.32758C7.83818 9.20508 7.92068 9.10675 7.92068 9.10675C7.92068 9.10675 8.12318 8.88508 8.21735 8.76508C8.29576 8.66535 8.36891 8.5616 8.43651 8.45425C8.53485 8.29591 8.56568 8.13341 8.51401 8.00758C8.28068 7.43758 8.03901 6.87008 7.79068 6.30675C7.74151 6.19508 7.59568 6.11508 7.46318 6.09925C7.41818 6.09425 7.37318 6.08925 7.32818 6.08591C7.21627 6.08035 7.10413 6.08147 6.99235 6.08925V6.09008Z" fill="#4FCE5D"/></svg>
                             Konfirmasi Pembayaran
                         </a>
