--- a/templates/participant_profile/re_payment.html
+++ b/templates/participant_profile/re_payment.html
@@ -84,7 +84,7 @@
                             </p>
                             <hr />
                             <p>
-                                Lakukan pembayaran daftar ulang ke Nomor Virtual Account <b>Mandiri</b> dan <b>CIMB Niaga</b>. <br />
+                                Lakukan pembayaran daftar ulang ke Nomor Virtual Account <b>Mandiri</b>. <br />
                             </p>
                             <p>
                                 <span class="card-detail card-bg border border-danger rounded p-2">Nomor Virtual Account: {{ data.virt_acc_number  }}</span>
