--- a/templates/participant_profile/payment.html
+++ b/templates/participant_profile/payment.html
@@ -44,7 +44,7 @@
                 <div class="col-lg-9 col-md-10">
                     <div class="card-red-gradient text-center ">
                         <h1 class="mb-3">Silahkan Lakukan <br> Pembayaran Dahulu</h1>
-                        <p>Silakan lakukan pembayaran daftar Primaseru ke nomor rekening:</p>
+                        <p>{{ data.sub_title  }}</p>
                         <h4 class="font-weight-bold mt-2">{{ data.rek_num  }}</h4>
                         <p class="mb-4">({{ data.bank|title }} A.N {{ data.whom_rek|title  }})</p>
                         <p class="mb-1">Sebesar</p>
